# thrift_codec

./: .travis.yml  Cargo.toml  README.md
examples/: decode.rs  decode_message.rs  encode.rs  encode_message.rs
src/: collections.rs  compact_encode.rs  constants.rs  decode.rs  encode.rs  error.rs  lib.rs  message.rs  structure.rs  value.rs  zigzag.rs
src/data/: data.rs  data_inner.rs  element.rs  list.rs  map.rs  mod.rs  set.rs  thrift_struct.rs  uuid.rs
